# genomes

./: .gitignore  Cargo.toml  README.md  package-lock.json
.github/workflows/: rust.yml
client/: gen-browser.js  index.html  package-lock.json  package.json  report.html  style.css  vega.js  vegaSpecs.json  vlSpec.json
data/: out.bam
optics/css/: gen-browser.css
src/: alignment_reader.rs  alignment_tests.rs  fasta_reader.rs  jsonMerge.py  json_generator.rs  lib.rs  main.rs  reference_tests.rs  report.rs  report_tests.rs  static_reader.rs  tests.rs  variant_reader.rs  variant_tests.rs
static/: index.html  vega.js
templates/: report.html.tera
tests/resources/: del.bam  del.bam.bai  deletion.vcf.gz.csi  insertion.vcf.gz.csi  inversion.vcf.gz.csi  ref.fa  ref.fa.fai
