[package]
name = "genomes"
version = "0.0.1"

publish = false

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket"}
rust-htslib = "*"
bit-vec = "*"
rustc-serialize = "0.3"
serde = { version = "1.0", features = ["derive"] }
bio = "*"
jsonm = "0.1"
serde_json = "1.0"


[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["compression","json","serve"]
