[package]
name = "genomes"
version = "0.1.1"

publish = false

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket"}
rust-htslib = "*"
bit-vec = "*"
rustc-serialize = "0.3"
serde = { version = "1.0", features = ["derive"] }
bio = "*"
serde_json = "1.0"
log = "0.4.8"
regex = "1.3.6"
clap = "2.33.0"
tera = "1"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["gzip_compression","json","serve","tera_templates"]

[[bin]]
name = "genomes"
path = "src/main.rs"